# python-rust-calls

./: .gitignore  Cargo.toml  README.md  build.sh  venv-refresh.sh
benches/: ahrs.rs
python/: check.py  main.py  text.txt
python/test/: file.py
rust/: Cargo.toml  build.sh  setup.py
rust/increment/: __init__.py
rust/src/: lib.rs
rust/word_count/: __init__.py
src/: increment.rs  incrementers.rs  lib.rs
src/ahrs/: ahrs.rs  madgwick_filter.rs  mod.rs  python_interface.rs
src/increment/: increment.rs  incrementers.rs
tests/: mod.rs  unit.rs
tests/ahrs/: madgwick_filter.rs  mod.rs  python_interface.rs
