[package]
authors = ["Jonathan Brouwer"]
name = "increment"
version = "0.1.0"
edition = "2018"

[package.metadata.maturin.scripts]
#Incrementer = "increment:Incrementer"
incrementer_one = "increment:incrementer_one"

[dependencies]
pyo3 = { version = "0.9.0-alpha.1", features = ["extension-module"] }

[lib]
name = "increment"
crate-type = ["cdylib"]
