[package]
authors = ["Jonathan Brouwer"]
name = "lobster_rust"
version = "0.1.0"
description = "Lobster rust code"
edition = "2018"

[dependencies]
pyo3 = "0.9.0-alpha.1"
nalgebra = "0.19.0"
alga = "0.9.2"
approx = "0.3.2"
rand = "0.7.3"

[lib]
name = "lobster_rust"
crate-type = ["rlib", "cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]